tinyc/test/good/assign-var-to-intruder.c
void foo() {}

int main()
{
    int x = 42;
    foo();
    int y = x;
    return 0;
}
