tinyc/test/bad/null-redeclare-fun.c
void NULL();
int main()
{
    return 0;
}
